# buybuy

./: .env  Cargo.toml  README.md
migrations/2022-10-03-001044_create_shop/: up.sql
migrations/2022-10-03-040602_create_products_table/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/products/: mod.rs  products_model.rs  products_resolver.rs  products_service.rs
src/shops/: mod.rs  shops_model.rs  shops_resolver.rs  shops_service.rs
